src/objects/Jira__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Credentials of jira</description>
    <fields>
        <fullName>EndpointURL__c</fullName>
        <label>EndpointURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Jira</label>
</CustomObject>